2015-06-08  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	added a consistency check that the corresponding u & g files are
	different

	(desired_generators): reordered the generators

	* post-process.sh:
	used the latest style files

	* separation.plot -> style-separation.plot:
	renamed

	* style-Qdependence.plot:        *** ADDED ***
	* style-Rdependence.plot:	 *** ADDED ***
	* style-alphadependence.plot:    *** ADDED ***
	added some style files for the modulation plots

	* post-process.sh:
	set generator list to Pythia-8205 Sherpa-2.1.1 Vincia-1201
	fixed a small bug introducing a bad behaviour of tha alpha dependence

2015-06-07  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	made sure that "best" comes first

	* post-process.sh:
	* produce-separation-data.py:
	Switched list of generators without Sherpa (until it has the right
	R values)
	Note that Pythia should be moved in a directory including its
	version number

	* produce-Rdependence-data.py:
	fixed output of R values

	* post-process.sh:
	* produce-Qdependence-data.py:
	fixed a few issues

	* MC_LHQG_EE.plot:
	rebinned directly from here

2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* produce-Qdependence-data.py:         *** ADDED ***
	* produce-Rdependence-data.py:	       *** ADDED ***
	* produce-alphadependence-data.py:     *** ADDED ***
	added scrpiuts to produce the various dependence results we want to study

	* post-process.sh:
	revamped to match the workflow mentioned in the README
	STILL PRELIMINARY!!!

	* produce-separation-data.py:
	fixes some comments; limited to R=0.6

	* produce-separation-plots.py --> produce-separation-data.py:
	file renamed

	* README.md:
	updated the whole workflow after the meeting in Les Houches on June 6th.
	mentioned that hadron-level is the default
	added a description of what set of plots we want (based on the wiki)

	* MC_LHQG_EE.cc:
	switched to R=0.2, 0.4, 0.6, 0.8, 1.0

	* post-process.sh: